--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ jobs:
         with:
           repository: 'apache/guacamole-server'
           ref: 'v1.3.0'
+          path: 'guacamole-server'
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
@@ -24,7 +25,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: .
+          context: 'guacamole-server'
           platforms: linux/arm64
           push: true
           tags: 2970298425/guacd:v1.3.0-arm64
