--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,11 +7,9 @@ jobs:
   buildx:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-        with:
-          repository: 'apache/guacamole-server'
-          ref: 'v1.3.0'
-          path: 'guacamole-server'
+      - uses: git clone guacamole-server
+        run: |
+          git clone --branch 1.3.0 https://github.com/apache/guacamole-server.git
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
