--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,9 +7,6 @@ jobs:
   buildx:
     runs-on: ubuntu-latest
     steps:
-      - name: git clone guacamole-server
-        run: |
-          git clone --branch 1.3.0 https://github.com/apache/guacamole-server.git
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
@@ -23,7 +20,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: 'guacamole-server'
-          platforms: linux/arm64
+          platforms: linux/amd64
           push: true
-          tags: 2970298425/guacd:v1.3.0-arm64
+          tags: 2970298425/guacenc:v1.3.0
