--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: 'guacamole-server'
-          platforms: linux/arm64
+          platforms: linux/amd64,linux/arm64
           push: true
-          tags: 2970298425/guacd:v1.3.0-arm64
+          tags: 2970298425/guacd:v1.3.1
